@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.31-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-31 13:33:17, took 00:18:29, with 50 workers, on 4228 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2026-01-31 14:57:13, took 00:21:48, with 50 workers, on 4234 cases, 0 failed, 0 traces, 7 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -3686,6 +3686,12 @@ http://sources.freertr.org/cfg/rout-bgp923.tst;rout-bgp923.tst;success;unicast+o
 http://sources.freertr.org/cfg/rout-bgp924.tst;rout-bgp924.tst;success;unicast+omup over bgp with additional path
 http://sources.freertr.org/cfg/rout-bgp925.tst;rout-bgp925.tst;success;ibgp rr with a lot peer
 http://sources.freertr.org/cfg/rout-bgp926.tst;rout-bgp926.tst;success;bgp route server with a lot peer
+http://sources.freertr.org/cfg/rout-bgp927.tst;rout-bgp927.tst;success;unicast+tunnel over bgp
+http://sources.freertr.org/cfg/rout-bgp928.tst;rout-bgp928.tst;success;unicast+tunnel over bgp with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp929.tst;rout-bgp929.tst;success;unicast+tunnel over bgp with additional path
+http://sources.freertr.org/cfg/rout-bgp930.tst;rout-bgp930.tst;success;unicast+encap over bgp
+http://sources.freertr.org/cfg/rout-bgp931.tst;rout-bgp931.tst;success;unicast+encap over bgp with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp932.tst;rout-bgp932.tst;success;unicast+encap over bgp with additional path
 http://sources.freertr.org/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.freertr.org/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
