@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.31-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-31 13:33:17, took 00:18:29, with 50 workers, on 4228 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2026-01-31 14:57:13, took 00:21:48, with 50 workers, on 4234 cases, 0 failed, 0 traces, 7 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3698,6 +3698,12 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp924.tst">rout-bgp924.tst</a></td><td>success</td><td>unicast+omup over bgp with additional path</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp925.tst">rout-bgp925.tst</a></td><td>success</td><td>ibgp rr with a lot peer</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp926.tst">rout-bgp926.tst</a></td><td>success</td><td>bgp route server with a lot peer</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp927.tst">rout-bgp927.tst</a></td><td>success</td><td>unicast+tunnel over bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp928.tst">rout-bgp928.tst</a></td><td>success</td><td>unicast+tunnel over bgp with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp929.tst">rout-bgp929.tst</a></td><td>success</td><td>unicast+tunnel over bgp with additional path</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp930.tst">rout-bgp930.tst</a></td><td>success</td><td>unicast+encap over bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp931.tst">rout-bgp931.tst</a></td><td>success</td><td>unicast+encap over bgp with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp932.tst">rout-bgp932.tst</a></td><td>success</td><td>unicast+encap over bgp with additional path</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
