@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.31-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-31 13:47:23, took 00:13:37, with 50 workers, on 865 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2026-01-31 15:10:37, took 00:12:54, with 50 workers, on 865 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
